- Implement rate limiting with SecurityRateLimitFilter - Refactor CORS configuration for improved security - - Add Caffeine caching for better performance - Optimize SecurityConfig for cleaner dependency injection